--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "Brice Wilson",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "4.38.0",
-    "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.7.2"
+    "webpack": "5.22.0",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2",
+    "ts-loader": "8.0.17"
   }
 }
