packages for course update

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Simple math game built with TypeScript.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack serve"
   },
   "author": "Brice Wilson",
   "license": "ISC",
   "devDependencies": {
+    "ts-loader": "8.0.17",
+    "typescript": "4.1.5",
     "webpack": "5.22.0",
     "webpack-cli": "4.5.0",
-    "webpack-dev-server": "3.11.2",
-    "ts-loader": "8.0.17"
+    "webpack-dev-server": "3.11.2"
   }
 }
